--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>pufarina</title>
-    <link rel="stylesheet" href="./style.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.0.0/annyang.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   </head>
   <body>
+   
+   <style >
+    .bec {
+      width: 100px;
+      height: 100px;
+      transition: background-color 0.7s ease;
+    }
+  </style>
+
     <script>
     if (annyang) {
       // Let's define a command.
