--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     if (annyang) {
       // Let's define a command.
       var commands = {
-        'red on': function() {
+        'open first light': function() {
           $.ajax('http://10.0.0.49:9000/1/on', {
             data : JSON.stringify({
               'edison': 'test'
@@ -32,7 +32,7 @@
             }});
         },
 
-        'red off': function() {
+        'turn off first light': function() {
           $.ajax('http://10.0.0.49:9000/1/off', {
             data : JSON.stringify({
               'edison': 'test'
