--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
             contentType : 'application/json',
             type : 'POST',
             success: function (res) {
-              document.getElementsByClassName('bec')[0].style.backgroundColor = 'red'
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'black'
             }});
         },
-
         'unlock door': function() {
           $.ajax('http://10.0.0.49:9000/3/unlock', {
             data : JSON.stringify({
@@ -52,10 +51,9 @@
             contentType : 'application/json',
             type : 'POST',
             success: function (res) {
-              document.getElementsByClassName('bec')[0].style.backgroundColor = 'red'
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'white'
             }});
         },
-
         'turn off first light': function() {
           $.ajax('http://10.0.0.49:9000/2/off', {
             data : JSON.stringify({
