--- a/index.html
+++ b/index.html
@@ -66,6 +66,48 @@
             }});
         },
 
+        'turn on all lights': functionParty() {
+          $.ajax('http://10.0.0.49:9000/2/on', {
+            data : JSON.stringify({
+              'edison': 'test'
+            }),
+            contentType : 'application/json',
+            type : 'POST',
+            success: function (res) {
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'green'
+            }});
+          $.ajax('http://10.0.0.49:9000/4/on', {
+            data : JSON.stringify({
+              'edison': 'test'
+            }),
+            contentType : 'application/json',
+            type : 'POST',
+            success: function (res) {
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'green'
+            }});
+        },
+
+        'turn off all lights': functionParty() {
+          $.ajax('http://10.0.0.49:9000/2/off', {
+            data : JSON.stringify({
+              'edison': 'test'
+            }),
+            contentType : 'application/json',
+            type : 'POST',
+            success: function (res) {
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'green'
+            }});
+          $.ajax('http://10.0.0.49:9000/4/off', {
+            data : JSON.stringify({
+              'edison': 'test'
+            }),
+            contentType : 'application/json',
+            type : 'POST',
+            success: function (res) {
+              document.getElementsByClassName('bec')[0].style.backgroundColor = 'green'
+            }});
+        },
+
         'blue on': function() {
           $.ajax('http://10.0.0.49:9000/4/on', {
             data : JSON.stringify({
